# parallax

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  QUICKSTART.md  README-evals.md  README.md  README_VALIDATION_UI.md  manual_test.md  pyproject.toml  start.sh  validate_findings.py
.claude-plugin/: plugin.json
.github/workflows/: secrets-scan.yml
agents/: assumption-hunter.md  constraint-finder.md  edge-case-prober.md  feasibility-skeptic.md  first-principles.md  prior-art-scout.md  problem-framer.md  requirement-auditor.md  review-synthesizer.md  scope-guardian.md  success-validator.md
datasets/inspect-ai-integration-requirements-light/: context_dependent_findings.jsonl  critical_findings.jsonl  metadata.json  must_find.jsonl
datasets/inspect-ai-integration-requirements-v2/: context_dependent_findings.jsonl  critical_findings.jsonl  inspect-ai-integration-requirements-v2.md  metadata.json  (+1 more)
docs/: adversarial-73-79-review.md  issue-72-completion-notes.md  issue-73-plan.md
evals/: ablation_tests.py  reviewer_eval.py  severity_calibration.py
experiments/: geval_comparison.py  geval_detail.py
hooks/: pre-commit
schemas/: README.md  delta-detection-v1.0.0.schema.json  pattern-extraction-v1.0.0.schema.json  reviewer-findings-v1.0.0.schema.json  run-metadata-v1.0.0.schema.json
scorers/: llm_judge_scorer.py  must_find_scorer.py  reverse_judge_scorer.py  severity_scorer.py
scripts/: findings-v3-edge-case-prober.jsonl  sample-findings-v3.jsonl  test-requirements-light.sh  validate-schemas.py
templates/: index.html
tools/: compare_to_baseline.py
(+159 files in other folders)
