[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-evals"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["inspect-ai>=0.3"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["evals*", "scorers*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
